# Netflix-skip-intro

./: Cargo.toml  README.md  app.rc  build.rs  icon.rc
src/: lib.rs  main.rs  single_instance.rs  skip_intro.rs  system.rs
